--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,7 +310,7 @@ h6 {
   top: 0;
   right: 0;
   left: 0;
-  bottom: 0;
+  height: 50vh;
   background: rgba(32, 38, 34, 0.9);
   transition: 0.3s;
   z-index: 999;
